--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "github-actions.workflows.pinned.workflows": [
     ".github/workflows/ci-cd-master.yml",
-    ".github/workflows/ci-cd-develop.yml"
+    ".github/workflows/ci-cd-develop.yml",
+    ".github/workflows/ci-cd-fauna.yml"
   ],
 }
