--- a/.github/workflows/ci-cd-fauna.yml
+++ b/.github/workflows/ci-cd-fauna.yml
@@ -35,7 +35,7 @@ jobs:
         extended: true
       if: success()
     - name: Build site
-      run: npm run build-dev
+      run: npm run build-fauna
       if: success()
     - name: Deploy site
       run: npm run deploy
