--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,8 @@
 [build]
   functions = "functions/"
+[dev]
+  framework = "#custom"
+  command = "hugo server"
+  port = 8888
+  targetPort = 1313
+  publish = "static"
