--- a/.github/workflows/ci-cd-fauna.yml
+++ b/.github/workflows/ci-cd-fauna.yml
@@ -27,6 +27,8 @@ jobs:
       run: |
         npm ci
         npm i -g gulp-cli postcss-cli autoprefixer netlify-cli
+        cd functions
+        npm ci
       if: success()
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
