--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "algosphere.org",
   "version": "1.0.0",
-  "description": "Algosphere website",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "hugo server -DEF --i18n-warnings",
