--- a/.github/workflows/ci-cd-fauna.yml
+++ b/.github/workflows/ci-cd-fauna.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         npm ci
-        npm i -g gulp-cli postcss-cli autoprefixer netlify-cli
+        npm i -g gulp-cli postcss-cli autoprefixer@9 netlify-cli
         cd functions
         npm ci
       if: success()
