--- a/.github/workflows/deploy-fauna.yml
+++ b/.github/workflows/deploy-fauna.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         npm ci
-        npm i -g gulp-cli postcss postcss-cli autoprefixer netlify-cli
+        npm i -g postcss postcss-cli autoprefixer gulp-cli netlify-cli
         cd functions
         npm ci
       if: success()
