--- a/data/algonewsold.yml
+++ b/data/algonewsold.yml
@@ -1,3 +1,6 @@
+- name: "AlgoNews - 2020 Vol. 7, No. 4"
+  year: "2020"
+  url: "https://docs.google.com/document/d/1WRP0u9W_9H8T7mB-BhFYye-k2TdolZPOsDhDuiOKEns/edit"
 - name: "AlgoNews - 2020 Vol. 7, No. 3"
   year: "2020"
   url: "https://docs.google.com/document/d/1tNsGmGbN7ycR-ogWhCAtrtcR6VTKt7Qr5ywgsw24_oM/edit"
